commit  html freelancer

--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width'>
+    <title>Freelancer - Start Bootstrap Theme</title>
+    <link href='css/main.css' rel='stylesheet' type='text/css' />
+    <!-- LINK ICONES-->
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.1.0/css/all.css' integrity='sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt' crossorigin='anonymous'>
+    <!-- LINK FONT GOOGLE-->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin-ext' rel='stylesheet'>
+  </head>
+  <body>
+    <!--  HEADER NAVEGAÇAO  -->
+    <div class='banner'>
+      <a class='logo' href='#page-top'>START BOOTSTRAP</a>
+      <nav>
+        <ul class='navi-bar'>
+          <li><a href='#portfolio'>PORTFOLIO</a></li>
+          <li><a href='#about'>ABOUT</a></li>
+          <li><a href='#contact'>CONTACT</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!--  HEADER CONTAINER -->
+    <div class='container'>
+      <span>
+        <img class='img-header' src='assets/images/profile.png'/>
+      </span>
+      <h1 class='title-header'>START BOOTSTRAP</h1>
+      <hr class='star-white'>
+        <i class="star-white fas fa-star"></i>
+      </hr>
+      <h2 class='sub-title'>Web Developer - Graphic Artist - User Experience Designer</h2>
+    </div>
+    <!-- CONTENT PORTFOLIO -->
+    <div class='portfolio'>
+      <h1 class='title-portfolio'>PORTFOLIO</h1>
+      <hr class='star-black'>
+        <i class="star-black fas fa-star"></i>
+      </hr>
+      <div class='img-portfolio'>
+        <img class='item' src='assets/images/portfolio/cabin.png'/>
+        <img class='item space' src='assets/images/portfolio/cake.png'/>
+        <img class='item' src='assets/images/portfolio/circus.png'/>
+        <img class='item' src='assets/images/portfolio/game.png'/>
+        <img class='item space' src='assets/images/portfolio/safe.png'/>
+        <img class='item' src='assets/images/portfolio/submarine.png'/>
+      </div>
+    </div>
+    <!--CONTENT ABOUT-->
+    <div class='about'>
+      <h1 class='title-about'>ABOUT</h1>
+      <hr class='star-white'>
+        <i class="star-white fas fa-star"></i>
+      </hr>
+      <section class='text-about'>
+        <div class='loren'>
+          <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+        </div>
+        <div class='loren'>
+          <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+        </div>
+      </section>
+      <section>
+        <button class='btn-about'>
+          <i class="icon fas fa-download"></i>
+          <a class='btn-download' href="#">Download Theme</a>
+        </button>
+      </section>
+    </div>
+    <!--CONTENT CONTACT -->
+    <div class='contact'>
+      <h1 class='title-contact'>CONTACT ME</h1>
+      <hr class='star-black'>
+        <i class="star-black fas fa-star"></i>
+      </hr>
+      <div class="form-contact">
+        <form>
+          <label>Name</label>
+            <input class='input-form' name='name' type='text'/>
+          <label>Email Address</label>
+            <input class='input-form' name='email' type='email'/>
+          <label>Phone Number</label>
+            <input class='input-form' name='phone' type='tel'/>
+          <label>Message</label>
+            <textarea class='input-form' name='msg' row='5'></textarea>
+            <button type='submit' name='send' class='btn-send'>Send</button>
+        </form>
+      </div>
+    </div>
+    <!-- FOOTER -->
+    <div class='footer'>
+      <!-- COLUMN 1 -->
+      <div class='column-footer column-1'>
+        <h1 class='title-footer'>LOCATION</h1>
+        <section>
+          <p class='text-footer'>3481 Melrose Place</br>Beverly Hills, CA 90210</p>
+        </section>
+      </div>
+      <!-- COLUMN 2 -->
+      <div class='column-footer column-2'>
+        <h1 class='title-footer'>AROUND THE WEB</h1>
+          <ul class='media-social'>
+            <li><a href='#'><i class='i-social fab fa-facebook-f'></i></a></li>
+            <li><a href='#'><i class='i-social fab fa-google-plus-g'></i></a></li>
+            <li><a href='#'><i class='i-social fab fa-twitter'></i></a></li>
+            <li><a href='#'><i class='i-social fab fa-linkedin-in'></i></a></li>
+            <li><a href='#'><i class='i-social fab fa-dribbble'></i></a></li>
+          </ul>
+          <p class='copyright'>Copyright © Your Website 2017</p>
+      </div>
+      <!-- COLUMN 3 -->
+      <div class='column-footer column-3'>
+        <h1 class='title-footer'>ABOUT FREELANCER</h1>
+        <p class='text-footer'>Freelance is a free to use, open source Bootstrap theme created by
+        <a class='link-footer' href='#'>Start Bootstrap</a>.</p>
+      </div>
+    </div>
+  </body>
+</html>
